// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provenance > basic 1`] = `
[
  "bafyreigjgi3vf3ra36lt5g2wy4kyjz3yjidw42cugyu62c46o7eacy5zbe",
  "bafyreiciavtdqojmryr4xb6ikuovrgkc5w5hau7gmlnyjzlipjizttsdfi",
  "bafyreigurnbmacoa6vokasdxnhknxmjf2jj3vzujitejowaeq3ihna5zxm",
]
`;

exports[`provenance > basic 2`] = `
[
  {
    "address": {
      "code": 112,
      "hash": Uint8Array [
        18,
        32,
        165,
        37,
        156,
        83,
        149,
        142,
        39,
        249,
        188,
        186,
        117,
        242,
        232,
        16,
        171,
        41,
        157,
        93,
        94,
        179,
        164,
        38,
        153,
        8,
        214,
        100,
        55,
        32,
        182,
        110,
        175,
        204,
      ],
      "version": 0,
    },
    "dmz": {
      "code": 113,
      "hash": Uint8Array [
        18,
        32,
        237,
        23,
        198,
        13,
        99,
        206,
        223,
        47,
        203,
        149,
        209,
        245,
        239,
        173,
        196,
        15,
        225,
        231,
        165,
        35,
        25,
        86,
        6,
        202,
        133,
        19,
        203,
        195,
        26,
        50,
        62,
        12,
      ],
      "version": 1,
    },
    "lineages": [],
    "states": "TODO",
    "turnovers": "TODO",
    "validators": {
      "code": 113,
      "hash": Uint8Array [
        18,
        32,
        72,
        5,
        102,
        56,
        57,
        44,
        142,
        35,
        203,
        135,
        200,
        85,
        29,
        88,
        153,
        66,
        237,
        186,
        112,
        83,
        230,
        98,
        219,
        132,
        229,
        104,
        122,
        81,
        153,
        206,
        67,
        42,
      ],
      "version": 1,
    },
  },
  {
    "publicKeys": [
      {
        "code": 113,
        "hash": Uint8Array [
          18,
          32,
          212,
          139,
          66,
          192,
          9,
          192,
          245,
          92,
          160,
          72,
          119,
          105,
          212,
          219,
          177,
          37,
          210,
          83,
          186,
          230,
          137,
          68,
          200,
          151,
          88,
          4,
          134,
          208,
          118,
          131,
          185,
          187,
        ],
        "version": 1,
      },
    ],
    "quorumThreshold": 1,
  },
  {
    "algorithm": "Secp256k1",
    "key": "puEKUvWNGow9H4HtyXKxEWoaERpZ9BzKV9jt2Tx8FBys",
    "name": "CI",
  },
]
`;

exports[`provenance basic 1`] = `
Array [
  "bafyreigjgi3vf3ra36lt5g2wy4kyjz3yjidw42cugyu62c46o7eacy5zbe",
  "bafyreiciavtdqojmryr4xb6ikuovrgkc5w5hau7gmlnyjzlipjizttsdfi",
  "bafyreigurnbmacoa6vokasdxnhknxmjf2jj3vzujitejowaeq3ihna5zxm",
]
`;

exports[`provenance basic 2`] = `
Array [
  Object {
    "address": Object {
      "code": 112,
      "hash": Uint8Array [
        18,
        32,
        165,
        37,
        156,
        83,
        149,
        142,
        39,
        249,
        188,
        186,
        117,
        242,
        232,
        16,
        171,
        41,
        157,
        93,
        94,
        179,
        164,
        38,
        153,
        8,
        214,
        100,
        55,
        32,
        182,
        110,
        175,
        204,
      ],
      "version": 0,
    },
    "dmz": Object {
      "code": 113,
      "hash": Uint8Array [
        18,
        32,
        237,
        23,
        198,
        13,
        99,
        206,
        223,
        47,
        203,
        149,
        209,
        245,
        239,
        173,
        196,
        15,
        225,
        231,
        165,
        35,
        25,
        86,
        6,
        202,
        133,
        19,
        203,
        195,
        26,
        50,
        62,
        12,
      ],
      "version": 1,
    },
    "lineages": Array [],
    "states": "TODO",
    "turnovers": "TODO",
    "validators": Object {
      "code": 113,
      "hash": Uint8Array [
        18,
        32,
        72,
        5,
        102,
        56,
        57,
        44,
        142,
        35,
        203,
        135,
        200,
        85,
        29,
        88,
        153,
        66,
        237,
        186,
        112,
        83,
        230,
        98,
        219,
        132,
        229,
        104,
        122,
        81,
        153,
        206,
        67,
        42,
      ],
      "version": 1,
    },
  },
  Object {
    "publicKeys": Array [
      Object {
        "code": 113,
        "hash": Uint8Array [
          18,
          32,
          212,
          139,
          66,
          192,
          9,
          192,
          245,
          92,
          160,
          72,
          119,
          105,
          212,
          219,
          177,
          37,
          210,
          83,
          186,
          230,
          137,
          68,
          200,
          151,
          88,
          4,
          134,
          208,
          118,
          131,
          185,
          187,
        ],
        "version": 1,
      },
    ],
    "quorumThreshold": 1,
  },
  Object {
    "algorithm": "Secp256k1",
    "key": "puEKUvWNGow9H4HtyXKxEWoaERpZ9BzKV9jt2Tx8FBys",
    "name": "CI",
  },
]
`;
